Use a division for footer and fixed button visibility

--- a/Lab2/index.css
+++ b/Lab2/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 #button {
-  display: hidden;
+  display: none;
 }
 
 .nav-bar {
@@ -125,7 +125,7 @@ h1,h2 {
   text-align: center;
 }
 
-.footer a,span {
+.footer-links {
   display: inline-block;
   text-decoration: none;
   font-family: sans-serif;
